--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,9 +14,11 @@
     <section class="search-line">
         <div class="search">
             <img src="../IMG/loop.png" alt="" class="loop">
-            <div class="search-area"></div>
+            <form action="" class="search-area">
+                <input type="text" class="search-text" placeholder="Search recipes">
+            </form>
         </div>
-        <div class="search-button">
+        <div class="search-button"> 
             <img src="../IMG/search.svg" alt="">
         </div>
     </section>
@@ -29,8 +31,8 @@
     </header>
 
     <main>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">dfsdfdsfsd</div>
+        <div class="card">aaaaaa</div>
         <div class="card"></div>
         <div class="card"></div>
     </main>
