--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,10 +31,10 @@
     </header>
 
     <main>
-        <div class="card">dfsdfdsfsd</div>
-        <div class="card">aaaaaa</div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card" name="Soup">soup</div>
+        <div class="card" name="Fried Potato">potat</div>
+        <div class="card" name="Steak">steak</div>
+        <div class="card" name="Boiled Egg">egg</div>
     </main>
 
     <footer>
@@ -42,5 +42,7 @@
         <div class="chapter"><img src="../IMG/Vector-1.svg" alt=""></div>
         <div class="chapter"><img src="../IMG/personPage.svg" alt=""></div>
     </footer>
+
+    <script src="../JS/script.js"></script>
 </body>
 </html>
