--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="search-line">
         <div class="search">
-            <img src="/IMG/loop.png" alt="" class="loop">
+            <img src="IMG/loop.png" alt="" class="loop">
             <form action="" class="search-area">
                 <input type="text" class="search-text" placeholder="Search recipes">
             </form>
@@ -33,7 +33,7 @@
     <main>
         <div class="card" name="Pulihora">
             <section class="card-image">
-                <img src="/IMG/Pulihora.png" alt="">
+                <img src="IMG/Pulihora.png" alt="">
             </section>
             <section class="about">
                 <header class="card-header">Pulihora</header>
@@ -42,14 +42,14 @@
                     <p class="time-cooking">Avg Cooking time: 45 mins</p>
                 </section>
                 <footer class="card-footer">
-                    <img src="/IMG/Ellipse 18.png" alt="" class="profile">
+                    <img src="IMG/Ellipse 18.png" alt="" class="profile">
                     <p class="dish-maker">Karthik kasturi</p>
                 </footer>
             </section>
         </div>
         <div class="card" name="Chicken dum biryani">
             <section class="card-image">
-                <img src="/IMG/Chicken dum biryani.png" alt="">
+                <img src="IMG/Chicken dum biryani.png" alt="">
             </section>
             <section class="about">
                 <header class="card-header">Chicken dum biryani</header>
@@ -58,14 +58,14 @@
                     <p class="time-cooking">Avg Cooking time: 70 mins</p>
                 </section>
                 <footer class="card-footer">
-                    <img src="/IMG/Ellipse 18.png" alt="" class="profile">
+                    <img src="IMG/Ellipse 18.png" alt="" class="profile">
                     <p class="dish-maker">Surya kumar yadav</p>
                 </footer>
             </section>
         </div>
         <div class="card" name="Chicken fried rice">
             <section class="card-image">
-                <img src="/IMG/Chicken fried rice.png" alt="">
+                <img src="IMG/Chicken fried rice.png" alt="">
             </section>
             <section class="about">
                 <header class="card-header">Chicken fried rice</header>
@@ -74,14 +74,14 @@
                     <p class="time-cooking">Avg Cooking time: 20 mins</p>
                 </section>
                 <footer class="card-footer">
-                    <img src="/IMG/Ellipse 18.png" alt="" class="profile">
+                    <img src="IMG/Ellipse 18.png" alt="" class="profile">
                     <p class="dish-maker">MS Dhoni</p>
                 </footer>
             </section>
         </div>
         <div class="card" name="Kaju biryani">
             <section class="card-image">
-                <img src="/MG/Kaju biryani.png" alt="">
+                <img src="MG/Kaju biryani.png" alt="">
             </section>
             <section class="about">
                 <header class="card-header">Kaju biryani</header>
@@ -90,14 +90,14 @@
                     <p class="time-cooking">Avg Cooking time: 35 mins</p>
                 </section>
                 <footer class="card-footer">
-                    <img src="/IMG/Ellipse 18.png" alt="" class="profile" >
+                    <img src="IMG/Ellipse 18.png" alt="" class="profile" >
                     <p class="dish-maker">Shanky</p>
                 </footer>
             </section>
         </div>
         <div class="card" name="Borsch">
             <section class="card-image">
-                <img src="/IMG/Borsch.jpg" alt="">
+                <img src="IMG/Borsch.jpg" alt="">
             </section>
             <section class="about">
                 <header class="card-header">Borsch</header>
@@ -106,7 +106,7 @@
                     <p class="time-cooking">Avg Cooking time: 60 mins</p>
                 </section>
                 <footer class="card-footer">
-                    <img src="/IMG/Ellipse 18.png" alt="" class="profile" >
+                    <img src="IMG/Ellipse 18.png" alt="" class="profile" >
                     <p class="dish-maker">Babushka</p>
                 </footer>
             </section>
@@ -114,9 +114,9 @@
     </main>
 
     <footer class="main-footer">
-        <div class="chapter"><img src="/IMG/Vector.svg" alt=""></div>
-        <div class="chapter"><img src="/IMG/Vector-1.svg" alt=""></div>
-        <div class="chapter"><img src="/IMG/personPage.svg" alt=""></div>
+        <div class="chapter"><img src="IMG/Vector.svg" alt=""></div>
+        <div class="chapter"><img src="IMG/Vector-1.svg" alt=""></div>
+        <div class="chapter"><img src="IMG/personPage.svg" alt=""></div>
     </footer>
 
     <script src="JS/script.js"></script>
