--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <section class="search-line">
         <div class="search">
-            <img src="IMG/loop.png" alt="" class="loop">
+            <img src="/IMG/loop.png" alt="" class="loop">
             <form action="" class="search-area">
                 <input type="text" class="search-text" placeholder="Search recipes">
             </form>
         </div>
         <div class="search-button"> 
-            
+            <img src="/IMG/Search-Button -IMG.svg" alt="">
         </div>
     </section>
 
@@ -81,7 +81,7 @@
         </div>
         <div class="card" name="Kaju biryani">
             <section class="card-image">
-                <img src="MG/Kaju biryani.png" alt="">
+                <img src="/IMG/Kaju biryani.png" alt="">
             </section>
             <section class="about">
                 <header class="card-header">Kaju biryani</header>
