--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
     </section>
 
     <header class="meals">
-        <div class="meal"><p>Breakfast</p></div>
-        <div class="meal"><p>Lunch</p></div>
-        <div class="meal"><p>Dinner</p></div>
-        <div class="meal"><p>Supper</p></div>
+        <div class="meal" id="All"><p>All</p></div>
+        <div class="meal" id="Breakfast"><p>Breakfast</p></div>
+        <div class="meal" id="Lunch"><p>Lunch</p></div>
+        <div class="meal" id="Dinner"><p>Dinner</p></div>
+        <div class="meal" id="Supper"><p>Supper</p></div>
     </header>
 
     <main>
-        <div class="card" name="Pulihora">
+        <div class="card" name="Pulihora" mealType="Dinner">
             <section class="card-image">
                 <img src="IMG/Pulihora.png" alt="">
             </section>
@@ -47,7 +48,7 @@
                 </footer>
             </section>
         </div>
-        <div class="card" name="Chicken dum biryani">
+        <div class="card" name="Chicken dum biryani"mealType="Breakfast">
             <section class="card-image">
                 <img src="IMG/Chicken dum biryani.png" alt="">
             </section>
@@ -63,7 +64,7 @@
                 </footer>
             </section>
         </div>
-        <div class="card" name="Chicken fried rice">
+        <div class="card" name="Chicken fried rice" mealType="Supper">
             <section class="card-image">
                 <img src="IMG/Chicken fried rice.png" alt="">
             </section>
@@ -79,7 +80,7 @@
                 </footer>
             </section>
         </div>
-        <div class="card" name="Kaju biryani">
+        <div class="card" name="Kaju biryani" mealType="Dinner">
             <section class="card-image">
                 <img src="/IMG/Kaju biryani.png" alt="">
             </section>
@@ -95,7 +96,7 @@
                 </footer>
             </section>
         </div>
-        <div class="card" name="Borsch">
+        <div class="card" name="Borsch" mealType="Lunch">
             <section class="card-image">
                 <img src="IMG/Borsch.jpg" alt="">
             </section>
