--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p class="time-cooking">Avg Cooking time: 45 mins</p>
                 </section>
                 <footer class="card-footer">
-                    <img src="IMG/Ellipse 18.png" alt="" class="profile">
+                    <img src="IMG/man.svg" alt="" class="profile">
                     <p class="dish-maker">Karthik kasturi</p>
                 </footer>
             </section>
@@ -59,7 +59,7 @@
                     <p class="time-cooking">Avg Cooking time: 70 mins</p>
                 </section>
                 <footer class="card-footer">
-                    <img src="IMG/Ellipse 18.png" alt="" class="profile">
+                    <img src="IMG/man1.svg" alt="" class="profile">
                     <p class="dish-maker">Surya kumar yadav</p>
                 </footer>
             </section>
@@ -91,7 +91,7 @@
                     <p class="time-cooking">Avg Cooking time: 35 mins</p>
                 </section>
                 <footer class="card-footer">
-                    <img src="IMG/Ellipse 18.png" alt="" class="profile" >
+                    <img src="IMG/man2.svg" alt="" class="profile" >
                     <p class="dish-maker">Shanky</p>
                 </footer>
             </section>
